--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -8,14 +8,31 @@
     tools:context=".MainActivity"
     >
 
-  <TextView
+  <com.moyuru.cinematiccountdownview.CinematicCountdownView
+      android:id="@+id/cinematicCountdownView"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:autoSizingText="true"
+      app:autoSizingPercentage="0.8"
+      app:color="@color/colorPrimary"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintDimensionRatio="h,1:1"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0"
+      app:rimStrokeWidth="8dp"
+      />
+
+  <Button
+      android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
+      android:text="start"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/cinematicCountdownView"
       />
 
 </android.support.constraint.ConstraintLayout>
